--- a/public/css/admin-style.css
+++ b/public/css/admin-style.css
@@ -43,16 +43,31 @@ button:hover
     border: none;
 }
 
+.secondary-button {
+    background: dimgrey;
+    color: white;
+}
+
 .primary-button {
     background: #6675ff;
     color: white;
 }
 
-.primary-button:hover {
+.primary-button:hover,
+.secondary-button:hover
+{
     color: white;
     opacity: 0.9;
 }
 
+/**
+#### LAYOUT
+*/
+.grid-two-columns {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 25px;
+}
 /**
 #### HEADER
 */
